Add AutoGroup Functionality by Lemmy101 <lemmy101@gmail.com>

--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -6488,6 +6488,14 @@ STR_SHIP                                                        :{BLACK}{SHIP}
 
 STR_TOOLBAR_RAILTYPE_VELOCITY                                   :{STRING} ({VELOCITY})
 
+STR_AUTO_GROUP_LABEL											:{BLACK}Auto-group
+STR_AUTO_GROUP_TOOLTIP											:{BLACK}Auto group all ungrouped vehicles
+STR_AUTO_GROUP_DELETE_LABEL										:{BLACK}Delete Auto-groups
+STR_AUTO_GROUP_DELETE_TOOLTIP									:{BLACK}Delete all auto-groups
+STR_ERROR_CANT_AUTO_GROUP										:Failed to auto-group 
+STR_AUTO_GROUP_LOCAL_ROUTE										:Local
+
+
 ######## Zoning toolbar
 
 STR_ZONING_TOOLBAR                                              :{WHITE}Zoning toolbar
