--- a/src/lang/arabic_egypt.txt
+++ b/src/lang/arabic_egypt.txt
@@ -195,6 +195,11 @@ STR_UNITS_VELOCITY_METRIC                                       :{COMMA}{NBSP}ك
 STR_UNITS_VELOCITY_SI                                           :{COMMA}{NBSP}م/ث
 STR_UNITS_VELOCITY_GAMEUNITS                                    :{DECIMAL}{NBSP}مربعات/ اليوم
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :ميل/س
+STR_UNIT_NAME_VELOCITY_METRIC                                   :كم/س
+STR_UNIT_NAME_VELOCITY_SI                                       :م/ث
+STR_UNIT_NAME_VELOCITY_GAMEUNITS                                :مربعات/ اليوم
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}{NBSP}حصان
 STR_UNITS_POWER_METRIC                                          :{COMMA}{NBSP}حصان
 STR_UNITS_POWER_SI                                              :{COMMA}{NBSP}ك واط
