--- a/src/lang/greek.txt
+++ b/src/lang/greek.txt
@@ -256,6 +256,10 @@ STR_UNITS_VELOCITY_IMPERIAL                                     :{COMMA}{NBSP}μ
 STR_UNITS_VELOCITY_METRIC                                       :{COMMA}{NBSP}χλμ/ώρα
 STR_UNITS_VELOCITY_SI                                           :{COMMA}{NBSP}m/s
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :μίλια/ώρα
+STR_UNIT_NAME_VELOCITY_METRIC                                   :χλμ/ώρα
+STR_UNIT_NAME_VELOCITY_SI                                       :m/s
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}{NBSP}hp
 STR_UNITS_POWER_METRIC                                          :{COMMA}{NBSP}hp
 STR_UNITS_POWER_SI                                              :{COMMA}{NBSP}kW
