--- a/src/lang/icelandic.txt
+++ b/src/lang/icelandic.txt
@@ -194,6 +194,10 @@ STR_UNITS_VELOCITY_IMPERIAL                                     :{COMMA} mílur/
 STR_UNITS_VELOCITY_METRIC                                       :{COMMA} km/klst
 STR_UNITS_VELOCITY_SI                                           :{COMMA} m/s
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :mílur/klst
+STR_UNIT_NAME_VELOCITY_METRIC                                   :km/klst
+STR_UNIT_NAME_VELOCITY_SI                                       :m/s
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}hö.
 STR_UNITS_POWER_METRIC                                          :{COMMA}hö.
 STR_UNITS_POWER_SI                                              :{COMMA}kW
