--- a/src/lang/ido.txt
+++ b/src/lang/ido.txt
@@ -192,6 +192,10 @@ STR_UNITS_VELOCITY_IMPERIAL                                     :{COMMA} mph
 STR_UNITS_VELOCITY_METRIC                                       :{COMMA} km/h
 STR_UNITS_VELOCITY_SI                                           :{COMMA} m/s
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :mph
+STR_UNIT_NAME_VELOCITY_METRIC                                   :km/h
+STR_UNIT_NAME_VELOCITY_SI                                       :m/s
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}kp
 STR_UNITS_POWER_METRIC                                          :{COMMA}kp
 STR_UNITS_POWER_SI                                              :{COMMA}kW
