--- a/src/lang/indonesian.txt
+++ b/src/lang/indonesian.txt
@@ -196,6 +196,11 @@ STR_UNITS_VELOCITY_METRIC                                       :{COMMA}{NBSP}km
 STR_UNITS_VELOCITY_SI                                           :{COMMA}{NBSP}meter/detik
 STR_UNITS_VELOCITY_GAMEUNITS                                    :{DECIMAL}{NBSP}ubin/hari
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :mil/j
+STR_UNIT_NAME_VELOCITY_METRIC                                   :km/jam
+STR_UNIT_NAME_VELOCITY_SI                                       :meter/detik
+STR_UNIT_NAME_VELOCITY_GAMEUNITS                                :ubin/hari
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}{NBSP}dk
 STR_UNITS_POWER_METRIC                                          :{COMMA}{NBSP}dk
 STR_UNITS_POWER_SI                                              :{COMMA}{NBSP}kW
