--- a/src/lang/lithuanian.txt
+++ b/src/lang/lithuanian.txt
@@ -391,6 +391,11 @@ STR_UNITS_VELOCITY_METRIC                                       :{COMMA}{NBSP}km
 STR_UNITS_VELOCITY_SI                                           :{COMMA}{NBSP}m/s
 STR_UNITS_VELOCITY_GAMEUNITS                                    :{DECIMAL}{NBSP}langeliai per dieną
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :mph
+STR_UNIT_NAME_VELOCITY_METRIC                                   :km/h
+STR_UNIT_NAME_VELOCITY_SI                                       :m/s
+STR_UNIT_NAME_VELOCITY_GAMEUNITS                                :langeliai per dieną
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}{NBSP}AG
 STR_UNITS_POWER_METRIC                                          :{COMMA}{NBSP}AG
 STR_UNITS_POWER_SI                                              :{COMMA}{NBSP}kW
