--- a/src/lang/malay.txt
+++ b/src/lang/malay.txt
@@ -193,6 +193,10 @@ STR_UNITS_VELOCITY_IMPERIAL                                     :{COMMA} bp/j
 STR_UNITS_VELOCITY_METRIC                                       :{COMMA} km/j
 STR_UNITS_VELOCITY_SI                                           :{COMMA} m/s
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :bp/j
+STR_UNIT_NAME_VELOCITY_METRIC                                   :km/j
+STR_UNIT_NAME_VELOCITY_SI                                       :m/s
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}kk
 STR_UNITS_POWER_METRIC                                          :{COMMA}kk
 STR_UNITS_POWER_SI                                              :{COMMA}kW
