--- a/src/lang/norwegian_nynorsk.txt
+++ b/src/lang/norwegian_nynorsk.txt
@@ -195,6 +195,10 @@ STR_UNITS_VELOCITY_IMPERIAL                                     :{COMMA} mi/t
 STR_UNITS_VELOCITY_METRIC                                       :{COMMA} km/t
 STR_UNITS_VELOCITY_SI                                           :{COMMA} m/s
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :mi/t
+STR_UNIT_NAME_VELOCITY_METRIC                                   :km/h
+STR_UNIT_NAME_VELOCITY_SI                                       :m/s
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA} hk
 STR_UNITS_POWER_METRIC                                          :{COMMA} hk
 STR_UNITS_POWER_SI                                              :{COMMA} kW
