--- a/src/lang/polish.txt
+++ b/src/lang/polish.txt
@@ -575,6 +575,11 @@ STR_UNITS_VELOCITY_METRIC                                       :{COMMA}{NBSP}km
 STR_UNITS_VELOCITY_SI                                           :{COMMA}{NBSP}m/s
 STR_UNITS_VELOCITY_GAMEUNITS                                    :{DECIMAL}{NBSP}p{P ole ola ól}/dzień
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :mph
+STR_UNIT_NAME_VELOCITY_METRIC                                   :km/h
+STR_UNIT_NAME_VELOCITY_SI                                       :m/s
+STR_UNIT_NAME_VELOCITY_GAMEUNITS                                :pola/dzień
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}{NBSP}KM
 STR_UNITS_POWER_METRIC                                          :{COMMA}{NBSP}KM
 STR_UNITS_POWER_SI                                              :{COMMA}{NBSP}kW
