--- a/src/lang/turkish.txt
+++ b/src/lang/turkish.txt
@@ -196,6 +196,10 @@ STR_UNITS_VELOCITY_IMPERIAL                                     :{COMMA}{NBSP}mi
 STR_UNITS_VELOCITY_METRIC                                       :{COMMA}{NBSP}km/s
 STR_UNITS_VELOCITY_SI                                           :{COMMA}{NBSP}m/s
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :mil/s
+STR_UNIT_NAME_VELOCITY_METRIC                                   :km/h
+STR_UNIT_NAME_VELOCITY_SI                                       :m/s
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}{NBSP}bg
 STR_UNITS_POWER_METRIC                                          :{COMMA}{NBSP}bg
 STR_UNITS_POWER_SI                                              :{COMMA}{NBSP}kW
