--- a/src/lang/ukrainian.txt
+++ b/src/lang/ukrainian.txt
@@ -321,6 +321,11 @@ STR_UNITS_VELOCITY_METRIC                                       :{COMMA}{NBSP}к
 STR_UNITS_VELOCITY_SI                                           :{COMMA}{NBSP}м/с
 STR_UNITS_VELOCITY_GAMEUNITS                                    :{DECIMAL}{NBSP}клітинок/день
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :миль/год
+STR_UNIT_NAME_VELOCITY_METRIC                                   :км/год
+STR_UNIT_NAME_VELOCITY_SI                                       :м/с
+STR_UNIT_NAME_VELOCITY_GAMEUNITS                                :клітинок/день
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA}{NBSP}к.с.
 STR_UNITS_POWER_METRIC                                          :{COMMA}{NBSP}к.с.
 STR_UNITS_POWER_SI                                              :{COMMA}{NBSP}кВт
