--- a/src/lang/urdu.txt
+++ b/src/lang/urdu.txt
@@ -194,6 +194,10 @@ STR_UNITS_VELOCITY_IMPERIAL                                     :{COMMA} میل 
 STR_UNITS_VELOCITY_METRIC                                       :{COMMA} کلو میٹر فی گھنٹھ
 STR_UNITS_VELOCITY_SI                                           :{COMMA} میٹر فی سیکنڈ
 
+STR_UNIT_NAME_VELOCITY_IMPERIAL                                 :میل فی گھنٹھ
+STR_UNIT_NAME_VELOCITY_METRIC                                   :کلو میٹر فی گھنٹھ
+STR_UNIT_NAME_VELOCITY_SI                                       :میٹر فی سیکنڈ
+
 STR_UNITS_POWER_IMPERIAL                                        :{COMMA} ھارس پآور
 STR_UNITS_POWER_METRIC                                          :{COMMA} ھارس پآور
 STR_UNITS_POWER_SI                                              :{COMMA} کلو واٹ
