--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -6580,6 +6580,8 @@ STR_SHIP                                                        :{BLACK}{SHIP}
 
 STR_TOOLBAR_RAILTYPE_VELOCITY                                   :{STRING} ({VELOCITY})
 
+STR_DECIMAL1_WITH_SCALE                                         :{DECIMAL1} ({DECIMAL}x)
+
 ######## Zoning toolbar
 
 STR_ZONING_TOOLBAR                                              :{WHITE}Zoning toolbar
